@@ -11,16 +11,6 @@ javafx {
     version = "17.0.2"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
-run {
-	jvmArgs = [
-			"--add-opens=java.base/java.lang.reflect=com.jfoenix",
-			"--add-opens=java.base/java.lang.reflect=com.jfoenix",
-			"--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
-			"--add-opens=javafx.base/com.sun.javafx.binding=com.jfoenix",
-			"--add-opens=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
-			"--add-opens=javafx.base/com.sun.javafx.event=com.jfoenix",
-	]
-}
 
 dependencies {
 	implementation project(":commons")
